--- a/vite-ts-app/package.json
+++ b/vite-ts-app/package.json
@@ -16,9 +16,7 @@
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/state": "^6.4.1",
     "@codemirror/view": "^6.24.1",
-    "cm6-theme-material-dark": "^0.2.0",
-    "cm6-theme-nord": "^0.2.0",
-    "cm6-theme-solarized-dark": "^0.2.0",
-    "codemirror": "^6.0.1"
+    "codemirror": "^6.0.1",
+    "thememirror": "^2.0.1"
   }
 }
