--- a/vite-ts-app/package.json
+++ b/vite-ts-app/package.json
@@ -17,6 +17,7 @@
     "@codemirror/state": "^6.4.1",
     "@codemirror/view": "^6.24.1",
     "codemirror": "^6.0.1",
+    "remote-storage": "^1.0.5",
     "thememirror": "^2.0.1"
   }
 }
