--- a/vite-ts-app/package.json
+++ b/vite-ts-app/package.json
@@ -24,6 +24,7 @@
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/state": "^6.4.1",
     "@codemirror/view": "^6.24.1",
+    "@supabase/supabase-js": "^2.47.10",
     "@uidotdev/usehooks": "^2.4.1",
     "codemirror": "^6.0.1",
     "remote-storage": "^1.0.5",
